# GeoTopoMethods

./: README.md  pyproject.toml  requirements.txt
examples/: heat_kernel_signature_segmentation.ipynb
geotopomethods/: __init__.py  mesh_segmentation.py
